Fix dark mode

--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -2,7 +2,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     background: white;
-    border: 1px solid #ced4da;
+    border-bottom: 1px solid #ced4da;
     transition: all 250ms ease-out;
 
     .navbar-brand {
